--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "e-commerce-front",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jotajotap.github.io/ecommerce-front",
   "dependencies": {
     "braintree-web": "^3.45.0",
     "braintree-web-drop-in-react": "^1.0.7",
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "3.2.3"
   }
 }
